erDiagram
    users {
        BIGINT id PK "NOT NULL"
        NVARCHAR(100) username UK "NOT NULL"
        NVARCHAR(255) email UK "NOT NULL"
        NVARCHAR(20) phone_number "NULL"
        NVARCHAR(500) password_hash "NULL"
        DATETIME2 email_verified_at "NULL"
        BIT is_active "NOT NULL"
        DATETIME2 created_at "NOT NULL"
        DATETIME2 updated_at "NULL"
        DATETIME2 last_login_at "NULL"
        DATETIME2 deleted_at "NULL"
        INT failed_login_attempts "NOT NULL"
        DATETIME2 locked_until "NULL"
        INT role_id FK "NOT NULL"
    }
    user_profiles {
        BIGINT user_id PK,FK "NOT NULL"
        NVARCHAR(100) display_name "NOT NULL"
        NVARCHAR(1000) avatar_url "NULL"
        DECIMAL(5_2) height_cm "NULL"
        DECIMAL(6_2) weight_kg "NULL"
        DATE birth_date "NULL"
        NVARCHAR(20) biological_sex "NULL"
        NVARCHAR(30) diet_type "NOT NULL"
        DATETIME2 updated_at "NULL"
    }
    roles {
        INT id PK "NOT NULL"
        NVARCHAR(50) role_name UK "NOT NULL"
    }
    user_identities {
        BIGINT id PK "NOT NULL"
        BIGINT user_id FK "NOT NULL"
        NVARCHAR(20) provider "NOT NULL"
        NVARCHAR(255) provider_subject "NOT NULL"
        DATETIME2 created_at "NOT NULL"
    }
    email_verification_tokens {
        BIGINT id PK "NOT NULL"
        BIGINT user_id FK "NOT NULL"
        VARCHAR(128) token_hash UK "NOT NULL"
        DATETIME2 expires_at "NOT NULL"
        DATETIME2 consumed_at "NULL"
        DATETIME2 created_at "NOT NULL"
    }
    password_reset_tokens {
        BIGINT id PK "NOT NULL"
        BIGINT user_id FK "NOT NULL"
        VARCHAR(128) token_hash UK "NOT NULL"
        DATETIME2 expires_at "NOT NULL"
        DATETIME2 used_at "NULL"
        DATETIME2 created_at "NOT NULL"
    }
    refresh_tokens {
        BIGINT id PK "NOT NULL"
        BIGINT user_id FK "NOT NULL"
        VARCHAR(128) token_hash UK "NOT NULL"
        DATETIME2 expires_at "NOT NULL"
        DATETIME2 revoked_at "NULL"
        DATETIME2 created_at "NOT NULL"
    }
    posts {
        BIGINT id PK "NOT NULL"
        BIGINT author_id FK "NOT NULL"
        NVARCHAR(20) post_type "NOT NULL"
        NVARCHAR(255) title "NOT NULL"
        NVARCHAR(MAX) content "NULL"
        NVARCHAR(20) meal_type "NULL"
        INT prep_time_mins "NULL"
        INT cooking_time_mins "NULL"
        INT servings "NULL"
        DECIMAL(10_2) calories_per_serving "NULL"
        NVARCHAR(30) diet_type "NULL"
        BIT ingredients_verified "NOT NULL"
        NVARCHAR(20) status "NOT NULL"
        BIGINT view_count "NOT NULL"
        DATETIME2 created_at "NOT NULL"
        DATETIME2 updated_at "NULL"
        BIT is_deleted "NOT NULL"
        DATETIME2 deleted_at "NULL"
    }
    post_media {
        BIGINT id PK "NOT NULL"
        BIGINT post_id FK "NOT NULL"
        NVARCHAR(1000) media_url "NOT NULL"
        NVARCHAR(20) media_type "NOT NULL"
        NVARCHAR(255) cloud_public_id "NULL"
        NVARCHAR(1000) thumbnail_url "NULL"
        INT duration_seconds "NULL"
        BIT is_primary "NOT NULL"
        INT display_order "NOT NULL"
        NVARCHAR(20) processing_status "NOT NULL"
        DATETIME2 created_at "NOT NULL"
    }
    post_summaries {
        BIGINT post_id PK,FK "NOT NULL"
        BIGINT source_media_id FK "NOT NULL"
        NVARCHAR(MAX) transcript "NULL"
        NVARCHAR(MAX) ai_generated_text "NULL"
        NVARCHAR(20) status "NOT NULL"
        NVARCHAR(100) model_name "NULL"
        NVARCHAR(2000) error_message "NULL"
        DATETIME2 requested_at "NOT NULL"
        DATETIME2 generated_at "NULL"
    }
    categories {
        INT id PK "NOT NULL"
        NVARCHAR(100) name "NOT NULL"
        NVARCHAR(120) slug UK "NOT NULL"
        NVARCHAR(20) category_type "NOT NULL"
        NVARCHAR(20) post_category_kind "NULL"
        BIT is_active "NOT NULL"
    }
    post_categories {
        BIGINT post_id PK,FK "NOT NULL"
        INT category_id PK,FK "NOT NULL"
    }
    ingredients {
        BIGINT id PK "NOT NULL"
        NVARCHAR(100) name UK "NOT NULL"
        NVARCHAR(20) default_unit "NOT NULL"
        DECIMAL(10_2) calories_per_100g "NULL"
    }
    post_ingredients {
        BIGINT post_id PK,FK "NOT NULL"
        BIGINT ingredient_id PK,FK "NOT NULL"
        DECIMAL(12_3) quantity "NULL"
        NVARCHAR(20) unit "NOT NULL"
    }
    user_allergies {
        BIGINT user_id PK,FK "NOT NULL"
        BIGINT ingredient_id PK,FK "NOT NULL"
        DATETIME2 created_at "NOT NULL"
    }
    user_available_ingredients {
        BIGINT user_id PK,FK "NOT NULL"
        BIGINT ingredient_id PK,FK "NOT NULL"
        DECIMAL(12_3) quantity "NULL"
        NVARCHAR(20) unit "NOT NULL"
        DATETIME2 updated_at "NOT NULL"
    }
    post_likes {
        BIGINT user_id PK,FK "NOT NULL"
        BIGINT post_id PK,FK "NOT NULL"
        DATETIME2 created_at "NOT NULL"
    }
    saved_posts {
        BIGINT user_id PK,FK "NOT NULL"
        BIGINT post_id PK,FK "NOT NULL"
        DATETIME2 saved_at "NOT NULL"
    }
    comments {
        BIGINT id PK "NOT NULL"
        BIGINT post_id FK "NOT NULL"
        BIGINT user_id FK "NOT NULL"
        BIGINT parent_comment_id FK "NULL"
        NVARCHAR(1000) content "NOT NULL"
        NVARCHAR(20) status "NOT NULL"
        DATETIME2 created_at "NOT NULL"
        DATETIME2 updated_at "NULL"
        BIT is_deleted "NOT NULL"
        DATETIME2 deleted_at "NULL"
    }
    meal_plans {
        BIGINT id PK "NOT NULL"
        BIGINT user_id FK "NOT NULL"
        DATE start_date "NOT NULL"
        DATE end_date "NOT NULL"
        DECIMAL(5_2) height_cm "NOT NULL"
        DECIMAL(6_2) weight_kg "NOT NULL"
        DECIMAL(6_2) bmi_value "NOT NULL"
        NVARCHAR(30) diet_type "NOT NULL"
        NVARCHAR(MAX) allergies_snapshot "NOT NULL"
        NVARCHAR(MAX) available_ingredients_snapshot "NOT NULL"
        NVARCHAR(20) generation_source "NOT NULL"
        NVARCHAR(100) model_name "NULL"
        NVARCHAR(20) status "NOT NULL"
        NVARCHAR(2000) error_message "NULL"
        DATETIME2 created_at "NOT NULL"
        DATETIME2 updated_at "NULL"
        DATETIME2 saved_at "NULL"
    }
    meals {
        BIGINT id PK "NOT NULL"
        BIGINT owner_user_id FK "NULL"
        NVARCHAR(255) combo_name "NOT NULL"
        NVARCHAR(MAX) description "NULL"
        DECIMAL(6_2) servings "NOT NULL"
        DECIMAL(10_2) total_calories "NULL"
        NVARCHAR(30) diet_type "NOT NULL"
        DATETIME2 created_at "NOT NULL"
    }
    meal_plan_schedule {
        BIGINT id PK "NOT NULL"
        BIGINT meal_plan_id FK "NOT NULL"
        BIGINT meal_id FK "NOT NULL"
        TINYINT day_of_week "NOT NULL"
        NVARCHAR(20) meal_time "NOT NULL"
        DECIMAL(6_2) portion_multiplier "NOT NULL"
    }
    meal_ingredients {
        BIGINT meal_id PK,FK "NOT NULL"
        BIGINT ingredient_id PK,FK "NOT NULL"
        DECIMAL(12_3) calculated_quantity "NULL"
        NVARCHAR(20) unit "NOT NULL"
    }
    chat_sessions {
        BIGINT id PK "NOT NULL"
        BIGINT user_id FK "NULL"
        UNIQUEIDENTIFIER guest_session_id "NULL"
        NVARCHAR(MAX) context_summary "NULL"
        BIGINT summary_through_message_id "NULL"
        DATETIME2 started_at "NOT NULL"
        DATETIME2 last_activity_at "NOT NULL"
    }
    chat_messages {
        BIGINT id PK "NOT NULL"
        BIGINT session_id FK "NOT NULL"
        NVARCHAR(20) sender_type "NOT NULL"
        NVARCHAR(MAX) message_text "NOT NULL"
        DATETIME2 created_at "NOT NULL"
    }
    ai_usage {
        BIGINT id PK "NOT NULL"
        UNIQUEIDENTIFIER request_id UK "NOT NULL"
        BIGINT user_id FK "NULL"
        UNIQUEIDENTIFIER guest_session_id "NULL"
        NVARCHAR(30) feature_type "NOT NULL"
        NVARCHAR(50) provider "NOT NULL"
        NVARCHAR(100) model_name "NOT NULL"
        NVARCHAR(20) status "NOT NULL"
        INT input_tokens "NULL"
        INT output_tokens "NULL"
        DATETIME2 created_at "NOT NULL"
    }
    post_embeddings {
        BIGINT id PK "NOT NULL"
        BIGINT post_id FK "NOT NULL"
        INT chunk_index "NOT NULL"
        NVARCHAR(255) vector_id "NULL"
        VARCHAR(64) content_hash "NOT NULL"
        NVARCHAR(100) embedding_model "NOT NULL"
        NVARCHAR(20) status "NOT NULL"
        DATETIME2 embedded_at "NULL"
    }
    shops {
        BIGINT id PK "NOT NULL"
        BIGINT suggested_by_user_id FK "NULL"
        NVARCHAR(255) google_place_id "NULL"
        NVARCHAR(255) name "NOT NULL"
        NVARCHAR(1000) address "NULL"
        DECIMAL(10_7) latitude "NULL"
        DECIMAL(10_7) longitude "NULL"
        BIT is_approved "NOT NULL"
        BIT is_deleted "NOT NULL"
        DATETIME2 created_at "NOT NULL"
    }
    shop_categories {
        BIGINT shop_id PK,FK "NOT NULL"
        INT category_id PK,FK "NOT NULL"
    }
    flags {
        BIGINT id PK "NOT NULL"
        BIGINT reporter_id FK "NULL"
        BIGINT post_id FK "NULL"
        BIGINT comment_id FK "NULL"
        BIGINT shop_id FK "NULL"
        NVARCHAR(500) reason "NOT NULL"
        NVARCHAR(20) status "NOT NULL"
        BIGINT resolved_by_admin_id FK "NULL"
        NVARCHAR(2000) resolution_note "NULL"
        DATETIME2 created_at "NOT NULL"
        DATETIME2 resolved_at "NULL"
        NVARCHAR(10) source_type "NOT NULL"
        NVARCHAR(100) ai_model_name "NULL"
    }
    roles ||--|{ users : "has_role"
    users ||--|| user_profiles : "has_profile"
    users ||--|{ user_identities : "external_login"
    users ||--|{ email_verification_tokens : "verification_tokens"
    users ||--|{ password_reset_tokens : "password_resets"
    users ||--|{ refresh_tokens : "refresh_sessions"
    users ||--|{ posts : "authors"
    posts ||--|{ post_media : "has_media"
    posts ||--|| post_summaries : "summary_of"
    post_media ||--|| post_summaries : "summarizes_media"
    posts ||--|{ post_categories : "categorized"
    categories ||--|{ post_categories : "post_category"
    posts ||--|{ post_ingredients : "uses_ingredient"
    ingredients ||--|{ post_ingredients : "ingredient_in_post"
    users ||--|{ user_allergies : "declares_allergy"
    ingredients ||--|{ user_allergies : "allergen_ingredient"
    users ||--|{ user_available_ingredients : "owns_pantry"
    ingredients ||--|{ user_available_ingredients : "pantry_item"
    users ||--|{ post_likes : "likes"
    posts ||--|{ post_likes : "liked_post"
    users ||--|{ saved_posts : "saves"
    posts ||--|{ saved_posts : "saved_post"
    posts ||--|{ comments : "comment_on"
    users ||--|{ comments : "writes"
    comments ||--|{ comments : "reply_to"
    users ||--|{ meal_plans : "owns_plan"
    users ||--|{ meals : "owns_meal"
    meal_plans ||--|{ meal_plan_schedule : "contains_slot"
    meals ||--|{ meal_plan_schedule : "scheduled_meal"
    meals ||--|{ meal_ingredients : "requires"
    ingredients ||--|{ meal_ingredients : "meal_ingredient"
    users ||--|{ chat_sessions : "starts_chat"
    chat_sessions ||--|{ chat_messages : "contains_message"
    users ||--|{ ai_usage : "uses_ai"
    posts ||--|{ post_embeddings : "indexed_chunk"
    users ||--|{ shops : "suggests_shop"
    shops ||--|{ shop_categories : "shop_classification"
    categories ||--|{ shop_categories : "shop_category"
    users ||--|{ flags : "reports"
    posts ||--|{ flags : "reported_post"
    comments ||--|{ flags : "reported_comment"
    shops ||--|{ flags : "reported_shop"
    users ||--|{ flags : "resolves"
